header section added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
 </head>
 <body>
 
+
+    <header class="h-[100px] flex items-center justify-between px-8">
+
+        <div class="flex items-center gap-3">
+            <img class="w-[70px]" src="assets/logo.png" alt="">
+            <h2 class="font-bold text-[#006747] text-2xl">Emergency <br> Service</h2>
+        </div>
+
+        <div class="flex gap-5">
+            <button class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-3 rounded-full w-[100px] justify-center font-bold"><span>0</span><img class="w-[30px]" src="assets/heart.png" alt=""></button>
+            <button class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-3 rounded-full w-[100px] justify-center font-bold"><span>100</span><img class="w-[30px]" src="assets/coin.png" alt=""></button>
+            <button class="bg-[#00A63E] px-4 py-3 rounded-full w-[100px] justify-center font-bold text-white"><span>0</span> Copy</button>
+        </div>
+
+    </header>
+
 </body>
 
 </html>
