--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Hotline</title>
-    <link rel="shortcut icon" href="assets/logo.png" type="image/png">
+    <link rel="shortcut icon" href="assets/logo-dark.png" type="image/png">
     <!-- tailwind cdn -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- font awesome cdn -->
@@ -30,6 +30,23 @@
         </div>
 
     </header>
+
+
+    <main>
+        <!-- banner section  -->
+        <section>
+            <div class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-5">
+                <img class="w-[100px] mx-auto" src="assets/logo-dark.png" alt="">
+                <h1 class="text-4xl font-bold text-white my-3">Emergency Service Directory</h1>
+                <p class="text-white font-medium">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+            </div>
+        </section>
+
+
+
+
+        
+    </main>
 
 </body>
 
