--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
 
@@ -24,9 +25,15 @@
         </div>
 
         <div class="flex gap-5">
-            <button class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-3 rounded-full w-[100px] justify-center font-bold"><span>0</span><img class="w-[30px]" src="assets/heart.png" alt=""></button>
-            <button class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-3 rounded-full w-[100px] justify-center font-bold"><span>100</span><img class="w-[30px]" src="assets/coin.png" alt=""></button>
-            <button class="bg-[#00A63E] px-4 py-3 rounded-full w-[100px] justify-center font-bold text-white"><span>0</span> Copy</button>
+            <button
+                class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-3 rounded-full w-[100px] justify-center font-bold"><span>0</span><img
+                    class="w-[30px]" src="assets/heart.png" alt=""></button>
+            <button
+                class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-3 rounded-full w-[100px] justify-center font-bold"><span>100</span><img
+                    class="w-[30px]" src="assets/coin.png" alt=""></button>
+            <button
+                class="bg-[#00A63E] px-4 py-3 rounded-full w-[100px] justify-center font-bold text-white"><span>0</span>
+                Copy</button>
         </div>
 
     </header>
@@ -38,14 +45,281 @@
             <div class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-center py-5">
                 <img class="w-[100px] mx-auto" src="assets/logo-dark.png" alt="">
                 <h1 class="text-4xl font-bold text-white my-3">Emergency Service Directory</h1>
-                <p class="text-white font-medium">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+                <p class="text-white font-medium">Government Emergency Services at Your Fingertip – A Project by
+                    Government of the People’s Republic of Bangladesh</p>
             </div>
         </section>
 
 
 
 
-        
+        <!-- featured section  -->
+        <section class="bg-[#f1fcf2] h-full">
+
+            <section class="w-11/12 mx-auto grid grid-cols-5 gap-10 pt-12">
+
+                <!-- card container section  -->
+                <section class="col-span-4">
+
+
+                    <!-- all cards  -->
+                    <div class="grid grid-cols-3 gap-8">
+
+                        <!-- card 1 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#FFE3E2] rounded-xl p-3">
+                                    <img src="assets/emergency.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">National Emergency Number</h2>
+                            <p class="text-gray-600">National Emergency</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">999</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">All</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+
+                        <!-- card 2 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#DFEFFF] rounded-xl p-3">
+                                    <img src="assets/police.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">Police Helpline Number</h2>
+                            <p class="text-gray-600">Police</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">999</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Police</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+
+                        <!-- card 3 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#FFE3E2] rounded-xl p-3">
+                                    <img src="assets/fire-service.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">Fire Service Number</h2>
+                            <p class="text-gray-600">Fire Service</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">999</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Fire</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+
+                        <!-- card 4 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#FFE3E2] rounded-xl p-3">
+                                    <img src="assets/ambulance.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">Ambulance Service</h2>
+                            <p class="text-gray-600">Ambulance</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">1994-999999</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Health</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+                        
+                        <!-- card 5 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#FFE3E2] rounded-xl p-3">
+                                    <img src="assets/emergency.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">Women & Child Helpline</h2>
+                            <p class="text-gray-600">Women & Child Helpline</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">109</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Help</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+
+                        <!-- card 6 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#FFE3E2] rounded-xl p-3">
+                                    <img src="assets/emergency.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">Anti-Corruption Helpline</h2>
+                            <p class="text-gray-600">Anti-Corruption</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">106</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Govt.</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+
+                        <!-- card 7 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#FFE3E2] rounded-xl p-3">
+                                    <img src="assets/emergency.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">Electricity Helpline</h2>
+                            <p class="text-gray-600">Electricity Outage</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">16216</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Electricity</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+
+                        <!-- card 8 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#FFE3E2] rounded-xl p-3">
+                                    <img src="assets/brac.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">Brac Helpline</h2>
+                            <p class="text-gray-600">Brac</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">16445</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">NGO</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+
+                        <!-- card 9 -->
+                        <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
+                            <div class="flex justify-between  items-center">
+                                <div class="w-[60px] bg-[#FFE3E2] rounded-xl p-3">
+                                    <img src="assets/Bangladesh-Railway.png" alt="">
+                                </div>
+                                <i class="fa-regular fa-heart cursor-pointer text-3xl text-gray-600"></i>
+                            </div>
+
+                            <h2 class="font-bold text-xl mt-4">Bangladesh Railway Helpline</h2>
+                            <p class="text-gray-600">Bangladesh Railway</p>
+                            <h2 class="font-bold mt-6 text-3xl mb-1">163</h2>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Travel</p>
+
+
+                            <div class="flex gap-3">
+                                <button
+                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                        class="fa-regular fa-copy"></i> Copy</button>
+                                <button
+                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                        class="fa-solid fa-phone"></i> Call</button>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+
+
+                </section>
+
+                <aside class="bg-green-200 col-span-1">
+                    <h1>history</h1>
+                </aside>
+
+
+            </section>
+        </section>
     </main>
 
 </body>
