aside section added

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
                         </div>
 
-                        
+
                         <!-- card 5 -->
                         <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
                             <div class="flex justify-between  items-center">
@@ -239,7 +239,8 @@
                             <h2 class="font-bold text-xl mt-4">Electricity Helpline</h2>
                             <p class="text-gray-600">Electricity Outage</p>
                             <h2 class="font-bold mt-6 text-3xl mb-1">16216</h2>
-                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Electricity</p>
+                            <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">Electricity
+                            </p>
 
 
                             <div class="flex gap-3">
@@ -313,8 +314,14 @@
 
                 </section>
 
-                <aside class="bg-green-200 col-span-1">
-                    <h1>history</h1>
+
+
+                <aside class="bg-white col-span-1 rounded-lg p-6">
+                    <div class="flex items-center justify-between">
+                        <h1 class="font-semibold text-xl"><i class="fa-regular fa-clock"></i> Call History</h1>
+                        <button
+                            class="bg-[#00A63E] px-4 py-3 rounded-full w-[100px] justify-center font-bold text-white">Clear</button>
+                    </div>
                 </aside>
 
 
