responsiveness added for mobile device

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 <body>
 
 
-    <header class="h-[100px] flex items-center justify-between px-8">
+    <header class="h-[100px] flex items-center justify-between px-3 md:px-8">
 
         <div class="flex items-center gap-3">
             <img class="w-[70px]" src="assets/logo.png" alt="">
-            <h2 class="font-bold text-[#006747] text-2xl">Emergency <br> Service</h2>
+            <h2 class="font-bold text-[#006747] text-2xl md:block hidden">Emergency <br> Service</h2>
         </div>
 
-        <div class="flex gap-5">
+        <div class="flex gap-2 md:gap-5">
             <button
-                class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-3 rounded-full w-[100px] justify-center font-bold"><span>0</span><img
-                    class="w-[30px]" src="assets/heart.png" alt=""></button>
+                class="flex gap-2 items-center bg-[#41ff6a25] px-2 py-1 md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span>0</span><img
+                    class="w-[15px] md:w-[30px]" src="assets/heart.png" alt=""></button>
             <button
-                class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-3 rounded-full w-[100px] justify-center font-bold"><span>100</span><img
-                    class="w-[30px]" src="assets/coin.png" alt=""></button>
+                class="flex gap-2 items-center bg-[#41ff6a25] md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span>100</span><img
+                    class="w-[15px] md:w-[30px]" src="assets/coin.png" alt=""></button>
             <button
-                class="bg-[#00A63E] px-4 py-3 rounded-full w-[100px] justify-center font-bold text-white"><span>0</span>
+                class="bg-[#00A63E] px-4 py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold text-white"><span>0</span>
                 Copy</button>
         </div>
 
@@ -54,16 +54,16 @@
 
 
         <!-- featured section  -->
-        <section class="bg-[#f1fcf2] h-full">
+        <section  class="bg-[#f1fcf2] h-full">
 
-            <section class="w-11/12 mx-auto grid grid-cols-5 gap-10 pt-12">
+            <section class="w-11/12 mx-auto grid md:grid-cols-5  gap-10 pt-12">
 
                 <!-- card container section  -->
-                <section class="col-span-4">
+                <section class="md:col-span-4">
 
 
                     <!-- all cards  -->
-                    <div class="grid grid-cols-3 gap-8">
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 
                         <!-- card 1 -->
                         <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
@@ -316,7 +316,7 @@
 
 
 
-                <aside class="bg-white col-span-1 rounded-lg p-6">
+                <aside class="bg-white md:col-span-1 rounded-lg md:p-6 p-3">
                     <div class="flex items-center justify-between">
                         <h1 class="font-semibold text-xl"><i class="fa-regular fa-clock"></i> Call History</h1>
                         <button
