--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <div class="flex gap-2 md:gap-5">
             <button
-                class="flex gap-2 items-center bg-[#41ff6a25] px-2 py-1 md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span>0</span><img
+                class="flex gap-2 items-center bg-[#41ff6a25] px-2 py-1 md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span id="heartCount">0</span><img
                     class="w-[15px] md:w-[30px]" src="assets/heart.png" alt=""></button>
-            <button
-                class="flex gap-2 items-center bg-[#41ff6a25] md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span>100</span><img
+            <button 
+                class="flex gap-2 items-center bg-[#41ff6a25] md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span id="coin">100</span><img
                     class="w-[15px] md:w-[30px]" src="assets/coin.png" alt=""></button>
             <button
                 class="bg-[#00A63E] px-4 py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold text-white"><span>0</span>
@@ -63,7 +63,7 @@
 
 
                     <!-- all cards  -->
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                    <div id="card-box" class="grid grid-cols-1 md:grid-cols-3 gap-8">
 
                         <!-- card 1 -->
                         <div class="bg-white max-w-[450px] rounded-lg p-8 shadow-lg">
@@ -75,7 +75,8 @@
                             </div>
 
                             <h2 class="font-bold text-xl mt-4">National Emergency Number</h2>
-                            <p class="text-gray-600">National Emergency</p>
+                            <p class="text-gray-600">National Emergency Service
+                            </p>
                             <h2 class="font-bold mt-6 text-3xl mb-1">999</h2>
                             <p class="bg-gray-100 px-4 py-2 inline-block rounded-full text-gray-600 mb-6">All</p>
 
@@ -85,7 +86,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -112,7 +113,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -139,7 +140,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -166,7 +167,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -193,7 +194,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -220,7 +221,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -248,7 +249,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -275,7 +276,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -302,7 +303,7 @@
                                     class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
-                                    class="w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
+                                    class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
                                         class="fa-solid fa-phone"></i> Call</button>
                             </div>
 
@@ -322,6 +323,10 @@
                         <button
                             class="bg-[#00A63E] px-4 py-3 rounded-full w-[100px] justify-center font-bold text-white">Clear</button>
                     </div>
+
+                    <div id="history">
+                        
+                    </div>
                 </aside>
 
 
@@ -329,6 +334,9 @@
         </section>
     </main>
 
+
+
+    <script src="script/script.js"></script>
 </body>
 
 </html>
