heart icon functionality added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="flex gap-2 md:gap-5">
             <button
-                class="flex gap-2 items-center bg-[#41ff6a25] px-2 py-1 md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span id="heartCount">0</span><img
+                class="flex gap-2 items-center bg-[#41ff6a25] px-2 py-1 md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span id="heart-count">0</span><img
                     class="w-[15px] md:w-[30px]" src="assets/heart.png" alt=""></button>
             <button 
                 class="flex gap-2 items-center bg-[#41ff6a25] md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span id="coin">100</span><img
