--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <aside class="bg-white md:col-span-1 rounded-lg md:p-6 p-3">
                     <div class="flex items-center justify-between">
                         <h1 class="font-semibold text-xl"><i class="fa-regular fa-clock"></i> Call History</h1>
-                        <button
+                        <button id="clear-btn"
                             class="bg-[#00A63E] px-4 py-3 rounded-full w-[100px] justify-center font-bold text-white">Clear</button>
                     </div>
 
