copy button functionality added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 class="flex gap-2 items-center bg-[#41ff6a25] md:px-4 md:py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold"><span id="coin">100</span><img
                     class="w-[15px] md:w-[30px]" src="assets/coin.png" alt=""></button>
             <button
-                class="bg-[#00A63E] px-4 py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold text-white"><span>0</span>
+                class="bg-[#00A63E] px-4 py-3 rounded-full w-[60px] md:w-[100px] justify-center text-sm  md:font-bold text-white"><span id="copy-count">0</span>
                 Copy</button>
         </div>
 
@@ -83,7 +83,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
@@ -110,7 +110,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
@@ -137,7 +137,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
@@ -164,7 +164,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
@@ -191,7 +191,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
@@ -218,7 +218,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
@@ -246,7 +246,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
@@ -273,7 +273,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
@@ -300,7 +300,7 @@
 
                             <div class="flex gap-3">
                                 <button
-                                    class="border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
+                                    class="copy-btn border-1 border-gray-200 w-1/2 py-1 rounded-lg text-gray-600 cursor-pointer"><i
                                         class="fa-regular fa-copy"></i> Copy</button>
                                 <button
                                     class="call-btn w-1/2 py-1 rounded-lg bg-[#00A63E] text-white font-medium cursor-pointer"><i
