--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-    <header class="h-[100px] flex items-center justify-between px-3 md:px-8">
+    <header class="md:h-[100px] h-[60px] flex items-center justify-between px-3 md:px-8">
 
         <div class="flex items-center gap-3">
             <img class="w-[40px] md:w-[70px]" src="assets/logo.png" alt="">
@@ -26,13 +26,13 @@
 
         <div class="flex gap-2 md:gap-5">
             <button
-                class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-0 md:px-4 md:py-3 rounded-full  md:w-[100px] justify-center text-sm  md:font-bold"><span
+                class="flex gap-2 items-center bg-[#41ff6a25] px-4 py-0 md:px-4 md:py-3 rounded-full  md:w-[100px] justify-center text-sm md:text-xl font-bold"><span
                     id="heart-count">0</span><img class="w-[15px] md:w-[30px]" src="assets/heart.png" alt=""></button>
             <button
-                class="flex gap-2 items-center bg-[#41ff6a25] px-2 py-0 md:px-4 md:py-3 rounded-full  md:w-[100px] justify-center text-sm  md:font-bold"><span
+                class="flex gap-2 items-center bg-[#41ff6a25] px-2 py-0 md:px-4 md:py-3 rounded-full  md:w-[100px] justify-center text-sm md:text-xl font-bold"><span
                     id="coin">100</span><img class="w-[15px] md:w-[30px]" src="assets/coin.png" alt=""></button>
             <button
-                class="bg-[#00A63E] px-4 py-3 rounded-full w-[60px] md:w-[100px] justify-center text-[10px] md:text-[1rem] flex gap-1 items-center md:font-bold text-white"><span
+                class="bg-[#00A63E] px-4 py-3 rounded-full w-[60px] md:w-[100px] justify-center text-[10px] md:text-[1rem] flex gap-1 items-center md:text-xl font-bold text-white"><span
                     id="copy-count">0</span>
                 Copy</button>
         </div>
